Mitigate a Safari UI issue.
The custom performance results table
built out of HTML divs did not render correctly in Safari.
With this change the text in the table is slightly off center (downwards)
but at least the table is rendered correctly.

This change only affects Safari.

--- a/performance/style.css
+++ b/performance/style.css
@@ -73,7 +73,6 @@
 
 .dataRow > div {
     font-size: 1.25em;
-    padding-top: 20px;
     overflow: hidden;
 }
 
